[package]
name = "nabla-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nabla-runner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["stream"] }
urlencoding = "2.1"
base64 = "0.21"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
zip = "0.6"
walkdir = "2.3"
base64 = "0.21"

[[test]]
name = "runner_tests"
path = "tests/runner_tests.rs"
